objects/SVMXC__PM_Schedule_Definition__c.object
<CustomObject>
    <fields>
        <fullName>Number_of_Technicians_Needed__c</fullName>
        <label>Number of Technicians Needed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SD_Subject__c</fullName>
        <formula>SVMXC__Work_Order_Purpose__r.SVMXC__Template_Name__c</formula>
        <label>SD Subject</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WO_Duration_In_Minutes__c</fullName>
        <defaultValue>120</defaultValue>
        <label>WO Duration (In Minutes)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>